feat: add redirect from main page to swagger
